--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-9.62MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.65MB/s(Youtube:不良林), server: us01.henet.cyou, port: 20000, type: vmess, uuid: 35c179df-804e-410c-8e27-299d9f2d0b6b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: us01.henet.cyou}}
-  - {name: 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.35MB/s(Youtube:不良林), server: zero.marythunt.xyz, port: 443, type: trojan, password: !<str> 372815193, sni: zero.marythunt.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.38MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 43960, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /j20-sp1, ws-headers: {Host: pp1.zhengzhongfeizhu.xyz}}
-  - {name: 🇨🇳 中国-9.51MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.59MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.94MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: 9029864a78d29a43, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.33MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: ca911d30af65ef1b, skip-cert-verify: true}
   - {name: 🇩🇪 德国-1.71MB/s(Youtube:不良林), server: 162.55.231.78, port: 443, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇺🇸 美国-574.3KB/s(Youtube:不良林), server: 161.8.184.62, port: 29622, type: ss, cipher: aes-256-gcm, password: !<str> 89930128}
+  - {name: 🇨🇳 中国-415.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33004, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-318.3KB/s(Youtube:不良林), server: ma-zf.jiashumao.net, port: 22983, type: trojan, password: 375e1e34-8f6f-39be-bdb9-52080f546d4d, sni: ma-zf.jiashumao.net, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-2.46MB/s(Youtube:不良林), server: 60.249.3.231, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.85MB/s(Youtube:不良林), server: v2hk3-ws-tls.ytv2line.top, port: 48203, type: vmess, uuid: 8d5e7a95-a0c5-444f-b9d7-e680eed2ee3a, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /cpyhyfd3, ws-headers: {Host: v2hk3-ws-tls.ytv2line.top}}
+  - {name: 🇨🇳 中国-5.51MB/s(Youtube:不良林), server: v2hk-ws-tls.ytv2line.top, port: 48203, type: vmess, uuid: 8d5e7a95-a0c5-444f-b9d7-e680eed2ee3a, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /cpyhyfd3, ws-headers: {Host: v2hk-ws-tls.ytv2line.top}}
+  - {name: 🇯🇵 日本-5.37MB/s(Youtube:不良林), server: jp02.henet.cyou, port: 20000, type: vmess, uuid: 63b3575f-a89a-4d01-8a74-bd1523aec4e8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: jp02.henet.cyou}}
+  - {name: 🇸🇬 新加坡-1.09MB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.33MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-574.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-318.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-9.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.33MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-574.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-318.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.33MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-574.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-318.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-2.46MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-9.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.33MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-574.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-318.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.33MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-574.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-318.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-9.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.33MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-574.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-318.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-9.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.33MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-574.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-318.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
