--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇩🇪 德国-1.71MB/s(Youtube:不良林), server: 162.55.231.78, port: 443, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇺🇸 美国-574.3KB/s(Youtube:不良林), server: 161.8.184.62, port: 29622, type: ss, cipher: aes-256-gcm, password: !<str> 89930128}
-  - {name: 🇨🇳 中国-415.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33004, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-318.3KB/s(Youtube:不良林), server: ma-zf.jiashumao.net, port: 22983, type: trojan, password: 375e1e34-8f6f-39be-bdb9-52080f546d4d, sni: ma-zf.jiashumao.net, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-2.46MB/s(Youtube:不良林), server: 60.249.3.231, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.85MB/s(Youtube:不良林), server: v2hk3-ws-tls.ytv2line.top, port: 48203, type: vmess, uuid: 8d5e7a95-a0c5-444f-b9d7-e680eed2ee3a, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /cpyhyfd3, ws-headers: {Host: v2hk3-ws-tls.ytv2line.top}}
-  - {name: 🇨🇳 中国-5.51MB/s(Youtube:不良林), server: v2hk-ws-tls.ytv2line.top, port: 48203, type: vmess, uuid: 8d5e7a95-a0c5-444f-b9d7-e680eed2ee3a, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /cpyhyfd3, ws-headers: {Host: v2hk-ws-tls.ytv2line.top}}
   - {name: 🇯🇵 日本-5.37MB/s(Youtube:不良林), server: jp02.henet.cyou, port: 20000, type: vmess, uuid: 63b3575f-a89a-4d01-8a74-bd1523aec4e8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: jp02.henet.cyou}}
+  - {name: 🇺🇸 美国-1.43MB/s(Youtube:不良林), server: 161.8.184.62, port: 29622, type: ss, cipher: aes-256-gcm, password: !<str> 89930128}
+  - {name: 🇨🇳 台湾-2.46MB/s(Youtube:不良林), server: 60.249.3.231, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-991.4KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-1.11MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33003, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-1.09MB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
+  - {name: 🇯🇵 日本-4.51MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-1.35MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.82MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.04MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-574.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-415.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-318.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-991.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.51MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.35MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.82MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇩🇪 德国-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-574.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-415.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-318.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-991.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.51MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.35MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.82MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-574.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-415.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-318.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-991.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.51MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.35MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.82MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇩🇪 德国-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-574.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-415.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-318.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-991.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.51MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.35MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.82MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇩🇪 德国-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-574.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-415.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-318.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-991.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.51MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.35MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.82MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-574.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-415.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-318.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-991.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.51MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.35MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.82MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-574.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-415.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-318.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.51MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.46MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-991.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.51MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.35MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.82MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
