--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-5.37MB/s(Youtube:不良林), server: jp02.henet.cyou, port: 20000, type: vmess, uuid: 63b3575f-a89a-4d01-8a74-bd1523aec4e8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: jp02.henet.cyou}}
-  - {name: 🇺🇸 美国-1.43MB/s(Youtube:不良林), server: 161.8.184.62, port: 29622, type: ss, cipher: aes-256-gcm, password: !<str> 89930128}
-  - {name: 🇨🇳 台湾-2.46MB/s(Youtube:不良林), server: 60.249.3.231, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-991.4KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-1.11MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33003, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.09MB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
-  - {name: 🇯🇵 日本-4.51MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-1.35MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.83MB/s(Youtube:不良林), server: 159.27.90.254, port: 63087, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 159.27.90.254}}
+  - {name: 🇺🇸 美国-1.15MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: caca1a4b-0a20-4a66-85d2-08b02c1afb02, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-10.02MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: ca911d30af65ef1b, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-11.16MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-3.34MB/s(Youtube:不良林), server: tw01.henet.cyou, port: 20000, type: vmess, uuid: 35c179df-804e-410c-8e27-299d9f2d0b6b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: tw01.henet.cyou}}
   - {name: 🇦🇺 澳大利亚-2.82MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
   - {name: 🇬🇧 英国-2.04MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-640.6KB/s(Youtube:不良林), server: hk01.henet.cyou, port: 20000, type: vmess, uuid: 63b3575f-a89a-4d01-8a74-bd1523aec4e8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: hk01.henet.cyou}}
+  - {name: 🇮🇳 印度-3.01MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.93MB/s(Youtube:不良林), server: 158.101.74.69, port: 31939, type: vmess, uuid: f130c826-40d9-44fb-be3d-75ebcb750d12, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.46MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-991.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.51MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.16MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.34MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.82MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-640.6KB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.93MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.46MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-991.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.51MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.16MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.34MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.82MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-640.6KB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.93MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.46MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-991.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.51MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.16MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.34MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.82MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-640.6KB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.93MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-2.46MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.34MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.46MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-991.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.51MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.16MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.34MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.82MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-640.6KB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.93MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.46MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-991.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.51MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.16MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.34MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.82MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-640.6KB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.93MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.46MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-991.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.51MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.16MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.34MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.82MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-640.6KB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.93MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.46MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-991.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.51MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.16MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-3.34MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.82MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-640.6KB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.01MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.93MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
