--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-303.6KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇨🇳 中国-1.39MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.12MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇬🇧 英国-2.04MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.83MB/s(Youtube:不良林), server: 159.27.90.254, port: 63087, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 159.27.90.254}}
-  - {name: 🇸🇬 新加坡-640.6KB/s(Youtube:不良林), server: hk01.henet.cyou, port: 20000, type: vmess, uuid: 63b3575f-a89a-4d01-8a74-bd1523aec4e8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: hk01.henet.cyou}}
-  - {name: 🇮🇳 印度-3.01MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.93MB/s(Youtube:不良林), server: 158.101.74.69, port: 31939, type: vmess, uuid: f130c826-40d9-44fb-be3d-75ebcb750d12, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-651.9KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇫🇷 法国-2.64MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-3.35MB/s(Youtube:不良林), server: zero.marythunt.xyz, port: 443, type: trojan, password: !<str> 372815193, sni: zero.marythunt.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.09MB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
+  - {name: 🇨🇳 中国-19.53MB/s(Youtube:不良林), server: v2jp3-ws-tls.ytv2line.top, port: 48103, type: vmess, uuid: 8d5e7a95-a0c5-444f-b9d7-e680eed2ee3a, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /cpyhyfd3, ws-headers: {Host: v2jp3-ws-tls.ytv2line.top}}
+  - {name: 🇨🇳 中国-11.16MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1011.0KB/s(Youtube:不良林), server: 116.129.254.78, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.78}}
+  - {name: 🇨🇳 中国-661.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33005, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.35MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33004, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-539.5KB/s(Youtube:不良林), server: ma-zf.jiashumao.net, port: 22983, type: trojan, password: 375e1e34-8f6f-39be-bdb9-52080f546d4d, sni: ma-zf.jiashumao.net, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.36MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 43960, type: vmess, uuid: eb2f8154-ff58-3b99-b393-28c8eecdbe64, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /j20-sp1, ws-headers: {Host: pp1.zhengzhongfeizhu.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-303.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.12MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-640.6KB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.93MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-651.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-19.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1011.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-661.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-539.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.36MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-303.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.12MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-640.6KB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.93MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-651.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-19.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1011.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-661.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-539.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.36MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-303.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.12MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-640.6KB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.93MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-651.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-19.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1011.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-661.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-539.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.36MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-303.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.12MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-640.6KB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.93MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-651.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-19.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1011.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-661.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-539.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.36MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-303.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.12MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-640.6KB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.93MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-651.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-19.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1011.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-661.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-539.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.36MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-303.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.12MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-640.6KB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.93MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-651.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-19.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1011.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-661.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-539.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.36MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-303.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.12MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.83MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-640.6KB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.93MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-651.9KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.64MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-19.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1011.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-661.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-539.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.36MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
